k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocery-aid
  namespace: grocery-aid
  labels:
    app: grocery-aid
spec:
  type: ClusterIP
  selector:
    app: grocery-aid
  ports:
    - port: 80
      targetPort: 4000
